minor css hotfix to fix ascii logo breaking on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -365,7 +365,7 @@ figure > a > img:active {
 
 @media (max-width: 500px) {
   header > pre {
-    font-size: 2vmin;
+    font-size: 1.8vmin;
     margin-block-end: 0.9rem;
   }
 
